<resources>
    <string name="app_name">All Seasons</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_purchasing">Goods Procurement</string>
    <string name="nav_sold">Sold Goods</string>
    <string name="nav_season">Growing Season</string>
    <string name="nav_warehouse">Warehouse</string>
    <string name="nav_utilities">Utility</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sales_report">Sales report</string>
    <string name="nav_about_us">About Us</string>

    <!-- Text Input Hint -->
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Goods Sold</item>
        <item>Goods Procurement</item>
        <item>Growing Season</item>
        <item>Warehouse</item>
        <item>Sales report</item>
        <item>Setting</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_delivered">Mark All as Delivered</string>
    <string name="action_mark_all_recieved">Mark All as Recieved</string>
    <string name="action_sort_by">Sort By</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Preference Settings Group -->

    <string name="title_first_section">Staffing</string>
    <string name="title_second_section">Accounting</string>
    <string name="title_third_section">Data and Sync</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sfp">SfpActivity</string>

    <!-- Shared Pref used in entire application -->
    <string name="pref_WiFiClientIp">WiFiClientIp</string>
    <string name="pref_GroupOwnerAddress">GroupOwnerAddress</string>
    <string name="pref_ServerBoolean">ServerBoolean</string>

    <!-- AdMob Ad ID-->
    <string name="fullscreen_ad_unit_id">ca-app-pub-6910223592682604/8991622777</string>
    <string name="banner_ad_unit_id">ca-app-pub-6910223592682604/2363084377</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Choose File</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>


</resources>
