<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="Transactions">
            <menu>
                <item
                    android:id="@+id/nav_purchasing"
                    android:icon="@drawable/ic_shopping_cart_white_48dp"
                    android:title="@string/nav_sold" />
                <item
                    android:id="@+id/nav_sold"
                    android:icon="@drawable/ic_add_shopping_cart_white_48dp"
                    android:title="@string/nav_purchasing" />
            </menu>
        </item>

        <item android:title="Growing Season">
            <menu>
                <item
                    android:id="@+id/nav_farming"
                    android:icon="@drawable/ic_assignment_white_48dp"
                    android:title="@string/nav_season" />
            </menu>
        </item>

        <item android:title="Inventory">
            <menu>
                <item
                    android:id="@+id/nav_warehouse"
                    android:icon="@drawable/ic_assignment_white_48dp"
                    android:title="@string/nav_warehouse" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_assessment_white_48dp"
            android:title="@string/nav_sales_report" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_48dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logoff"
            android:icon="@drawable/ic_power_settings_new_white_48dp"
            android:title="@string/action_logout" />
    </group>
</menu>